# Modular-Telemetry-Analysis-and-Visualization-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: circular_buffer.h  plugin_base.h  plugin_manager.cpp  plugin_manager.h  telemetry_data.cpp  telemetry_data.h
src/plugins/: noise_filter_plugin.h
